# Parallel_Computing_Basics-Practice_8-8_semester

./: CMakeLists.txt  main.cpp
